--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -86,7 +86,7 @@ Version: 1.0.0
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #ff4136;
+  --theme-color: #044DBC;
   --theme-color2: #FE8900;
   --theme-color3: #FFC000;
   --title-color: #1A1A1A;
